add example: dockerfile git clone 	- api-test02
 Committer: 김원준 <kim-wonjun@met.local>
 Changes to be committed:
	modified:   api-test01/Dockerfile
	new file:   api-test02/Dockerfile
	modified:   docker-compose.yml
	new file:   docker.md
	deleted:    test.md

--- a/api-test01/Dockerfile
+++ b/api-test01/Dockerfile
@@ -5,21 +5,22 @@ FROM node:10
 #ENV PATH=/Users/met/docker
 
 # 경로
-WORKDIR /Users/met/docker
+WORKDIR /Users/met/api-test01
 
 # 의존 관리 파일 복사
-COPY package.json ./
-COPY package-lock.json ./
-COPY tsconfig.json ./
-COPY tslint.json ./
+# COPY package.json ./
+# COPY package-lock.json ./
+# COPY tsconfig.json ./
+# COPY tslint.json ./
+
+# 파일 복사
 COPY ./ ./
 
-RUN ls
 # 의존 패키지 설치
 RUN npm install
 
 # 포트 열어주고
-EXPOSE 8080
+EXPOSE 10230
 
 # 실행
 CMD ["npm", "run", "dev"]
