--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: "qwe123!"
 
+  redis:
+    image: redis:5.0.3-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis/redis.conf:/etc/redis.conf:ro
+      - ./redis/data:/data/:rw
+    restart: always
+    entrypoint: ["redis-server", "/etc/redis.conf"]
+    networks:
+      - backend
+
   api:
     container_name: api-test01
     build:
@@ -49,5 +62,6 @@ networks:
 
 volumes:
   mysql:
+  redis:
   api-test01:
   # api-test02:
